@@ -1,7 +1,10 @@
 Revision history for Perl extension Net::SSLeay.
 
 ??????? 2018-??-??
-	- Added SSL_get_version, SSL_client_version and SSL_is_dtls.
+	- Add SSL_get_version, SSL_client_version and SSL_is_dtls.
+	- Add SSL_CTX_sess_set_new_cb and SSL_CTX_sess_set_remove_cb.
+	  Add new test file 44_sess.t for these and future session
+	  related tests for which no specific test file is needed.
 	- Enhance t/local/43_misc_functions.t get_keyblock_size test
 	  to work better with AEAD ciphers.
 
